#2185 Support logout endpoint with the `logoutEndpoint` config property
